Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.10.8:
	General:
	* Python build scripts and example plugins are now compatible with
	  Python 3. (Ashish Gupta) (#15624)

	libpurple:
	* Fix buffer overflow when parsing a malformed HTTP response with
	  chunked Transfer-Encoding. (Discovered by Matt Jones, Volvent)
	  (CVE-2014-NNNN)
	* Fix handling of SSL certificates without subjects when using libnss.
	* Fix handling of SSL certificates with timestamps in the distant future
	  when using libnss. (#15586)
	* Impose maximum download size for all HTTP fetches.

	Pidgin:
	* Better handling of URLs longer than 1000 letters.
	* Fix handling of multibyte UTF-8 characters in smiley themes. (#15756)

	Windows-Specific Changes:
	* When clicking file:// links, show the file in Explorer rather than
	  attempting to run the file. This reduces the chances of a user
	  clicking on a link and mistakenly running a malicious file.
	* Fix Tcl scripts. (#15520)
	* Fix crash-on-startup when ASLR is always on. (#15521)
	* Updates to dependencies:
		* NSS 3.15.3 and NSPR 4.10.2

	AIM and ICQ:
	* Fix a possible crash when receiving a malformed message in a Direct IM
	  session.

	Gadu-Gadu:
	* Fix buffer overflow with remote code execution potential. Only
	  triggerable by a Gadu-Gadu server or a man-in-the-middle.
	  (Discovered by Yves Younan, Sourcefire VRT) (CVE-2014-NNNN)
	* Disabled buddy list import/export from/to server (it didn't work
	  anymore). Buddy list synchronization will be implemented in 3.0.0.

	IRC:
	* Fix bug where initial IRC status would not be set correctly.
	* Fix bug where IRC wasn't available when libpurple was compiled with
	  Cyrus SASL support. (#15517)

	MSN:
	* Fix possible crash when sending very long messages. Not
	  remotely-triggerable. (Discovered by Matt Jones, Volvent)

	MXit:
	* Fix buffer overflow with remote code execution potential.
	  (Discovered by Sourcefire VRT) (CVE-2014-NNNN)